--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": ">=5.6.4",
         "guzzlehttp/guzzle": "^6.2",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "symfony/css-selector": "^3.2",
+        "symfony/dom-crawler": "^3.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
