--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "cloudcreativity/laravel-json-api": "^0.7.0",
+        "doctrine/dbal": "^2.5",
         "guzzlehttp/guzzle": "^6.2",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
@@ -13,6 +15,7 @@
         "symfony/dom-crawler": "^3.2"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.3",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.7"
