--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 /node_modules
 /public/storage
 /public/hot
+/public/css
+/public/fonts
+/public/mix-manifest.json
+/public/js
 /storage/*.key
 /vendor
 /.idea
