--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "doctrine/dbal": "^2.5",
         "guzzlehttp/guzzle": "^6.2",
         "laravel/framework": "5.4.*",
+        "laravel/passport": "^2.0",
         "laravel/tinker": "~1.0",
         "symfony/css-selector": "^3.2",
         "symfony/dom-crawler": "^3.2"
