--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=5.6.4",
         "cloudcreativity/laravel-json-api": "^0.7.0",
         "doctrine/dbal": "^2.5",
+        "eluceo/ical": "^0.11.2",
         "guzzlehttp/guzzle": "^6.2",
         "laravel/framework": "5.4.*",
         "laravel/passport": "^2.0",
