--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,9 @@
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "@php artisan optimize"
+            "@php artisan optimize",
+            "echo -n ${OAUTH_PUBLIC_KEY} > storage/oauth-public.key",
+            "echo -n ${OAUTH_PRIVATE_KEY} > storage/oauth-private.key"
         ],
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
