--- a/public/.htaccess
+++ b/public/.htaccess
@@ -17,4 +17,7 @@
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+
+    # Enable CORS
+    Header set Access-Control-Allow-Origin "*"
 </IfModule>
