--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "barryvdh/laravel-cors": "^0.11.0",
         "cloudcreativity/laravel-json-api": "^0.7.0",
         "doctrine/dbal": "^2.5",
         "eluceo/ical": "^0.11.2",
